# analyze_id_and_ban

./: .dockerignore  .gitignore  .isort.cfg  Dockerfile  README.md  docker-compose.yml  local.env  pyproject.toml
src/: __main__.py  local.env
src/http_app/: app.py  app_entety.py  routes.py
src/repositories/: exceptions.py  init_repositories.py  suspicion.py  transport_to_analyzer.py
src/schemas/: suspicion.py
src/settings/: __init__.py  analize_algorithms.py  application.py  init_settings.py  logging.py  suspicion.py
src/usescases/: suspicions.py
tests/: conftest.py
tests/api/: test_get_suspicion.py  test_increment_suspicion.py
tests/api/data/: urls.py
tests/api/data/response_data/: get_suspicion.py  set_suspicion.py
